bug: fix spacing on video card page

--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -450,3 +450,8 @@ body.index .card.academic-programs {
     height: auto;
   }
 }
+
+// add spacing to video card
+.path-news-video .read-more {
+  margin-top: 1rem;
+}
